[package]
name = "ucracc-lsp"
# ucracc-lsp is versioned INDEPENDENTLY of the crabcc workspace: it has its
# own `ucracc-lsp-vX.Y.Z` tag line + release (see
# .github/workflows/release-ucracc-lsp.yml), so it does not inherit
# `version.workspace`. Bump this in lockstep with the tag you push.
version = "0.4.0"
edition.workspace = true
license.workspace = true

# A navigation + retrieval LSP server backed by crabcc-core's symbol DB.
# Coexists with rust-analyzer (and other semantic LSPs) — does NOT do
# diagnostics, completion, or refactor. Optimised for cold-start < 100 ms
# and hover/definition/references < 20 ms p95.

[features]
default = ["yaml", "markdown"]
# tree-sitter-yaml. Surfaces top-level keys as DocumentSymbols (nav only,
# no call edges — YAML isn't code).
yaml = ["dep:tree-sitter-yaml"]
# tree-sitter-md. Surfaces ATX/setext headings as a doc outline.
markdown = ["dep:tree-sitter-md"]
# NOTE: Swift and Bash moved to crabcc-core as of v0.2.0 — they're code
# and now reachable via `crabcc index` / `crabcc sym` / the MCP server,
# not just ucracc-lsp.
# Enables the workspace/executeCommand `ucracc.memory.search` command.
memory = ["dep:crabcc-memory"]
# Enables `ucracc.webfetch`.
fetch = ["dep:crabcc-fetch", "dep:reqwest"]
# Enables `ucracc.rerank` and auto-rerank inside memory.search.
# Pulls fastembed and lazy-downloads bge-reranker-v2-m3 (~1.1 GB) on first use.
rerank = ["dep:fastembed"]

[dependencies]
crabcc-core = { workspace = true }
crabcc-memory = { workspace = true, optional = true }
crabcc-fetch = { path = "../crabcc-fetch", optional = true }
dashmap = "6"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tower-lsp = "0.20"

tree-sitter = { workspace = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-md = { workspace = true, optional = true }
moka = { workspace = true }

reqwest = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }

[lib]
name = "ucracc_lsp"
path = "src/lib.rs"

[[bin]]
name = "ucracc-lsp"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "sync", "io-std", "time"] }
serde_json = { workspace = true }

[[bench]]
name = "baseline_vs_lsp"
harness = false

[[bench]]
name = "extractor_cost"
harness = false

[[bench]]
name = "fixture_scale"
harness = false

