[package]
name = "wormhole-bpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wormhole-bpf"
path = "src/main.rs"

# aya speaks directly to Linux kernel interfaces (BPF syscall, netlink).
# All aya-related deps are gated to Linux only so the crate can still be
# checked on macOS/Windows (e.g. in a cross-platform workspace CI step).
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = "0.11"
log = "0.4"
tokio = { workspace = true, features = ["signal"] }
wormhole-bpf-common = { path = "../wormhole-bpf-common" }
