# wormhole-op — operator CLI + lib, compiles native + wasm32-unknown-unknown (Wave 3 Tasks 7-8).
#
# Wave 3 roadmap: add wormhole-proto, snow (+ wasm build), spake2, biscuit-auth,
# tokio-tungstenite once Noise_IK initiator path is implemented in src/lib.rs.

[package]
name = "wormhole-op"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wormhole-op"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
