# wormhole-proto — pure protocol types, no I/O.
#
# Envelope + Kind ser/de (postcard), per-session seq state machine,
# in-memory replay log model. Compiles to native and wasm32-unknown-unknown.

[package]
name = "wormhole-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }

[dev-dependencies]
tempfile = { workspace = true }
