[package]
name = "wormhole-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wormhole-relay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wormhole-proto = { workspace = true }
blake3 = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
