# cargo-fuzz crate for the FSST + SQLite roundtrip target.
#
# Standalone workspace (note the empty `[workspace]` table below) so it does
# not get pulled into the parent `crabcc` workspace's default build set —
# cargo-fuzz wants its own target dir and lock file, and we don't want
# `cargo check` at the repo root to require nightly.
#
# Build with `cargo +nightly fuzz build` (or, for a quick API-surface check
# without cargo-fuzz installed, just `cargo check`).

[package]
name = "crabcc-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata]
cargo-fuzz = true

[workspace]
# Empty intentionally — keeps this crate out of the parent workspace.

[dependencies]
libfuzzer-sys = "0.4"
# Must track crabcc-core's rusqlite (workspace pins 0.39, bundled) — two
# semver-incompatible rusqlite versions pull in two `libsqlite3-sys` crates,
# both declaring `links = "sqlite3"`, which cargo rejects.
rusqlite = { version = "0.39", features = ["bundled"] }
crabcc-core = { path = "..", features = ["compress", "markdown"] }

[[bin]]
name = "fsst_sqlite_roundtrip"
path = "fuzz_targets/fsst_sqlite_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fsst_decompress_arbitrary"
path = "fuzz_targets/fsst_decompress_arbitrary.rs"
test = false
doc = false
bench = false

[[bin]]
name = "md_parse_sanitize"
path = "fuzz_targets/md_parse_sanitize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pattern_find_callers"
path = "fuzz_targets/pattern_find_callers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fts_fuzzy_prefix"
path = "fuzz_targets/fts_fuzzy_prefix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "snippet_utf8"
path = "fuzz_targets/snippet_utf8.rs"
test = false
doc = false
bench = false
