[package]
name = "zed_crabcc"
version = "0.0.1"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Zed compiles extensions to wasm32-wasip1. Pin this to the version your target
# Zed expects; bump deliberately. If `cargo build --release --target
# wasm32-wasip1` fails on an API mismatch, align this version with the Zed
# release notes / the zed-industries/extensions repo.
zed_extension_api = "0.6"
