[project]
name = "crabcc-langchain"
version = "0.1.0"
description = "LangChain + LangGraph tools backed by the crabcc symbol index"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crabcc_langchain"]
